--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<p>Install sharetunnel globally (requires NodeJS) to make it accessible anywhere:</p>
 				<pre><code>npm install -g sharetunnel</code></pre>
 				<p>Start a webserver on some local port (eg http://localhost:8000) and use the command line interface to request a tunnel to your local server:</p>
-				<pre><code>lt --port 8000</code></pre>
+				<pre><code>st --port 8000</code></pre>
 				<p>You will receive a url, for example https://gqgh.sharetunnel.work, that you can share with anyone for as long as your local instance of lt remains active. Any requests will be routed to your local service at the specified port.</p>
 			</article>
 			<article id="features" class="main__features main__article">
