--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<pre><code>npm install -g sharetunnel</code></pre>
 				<p>Start a webserver on some local port (eg http://localhost:8000) and use the command line interface to request a tunnel to your local server:</p>
 				<pre><code>st --port 8000</code></pre>
-				<p>You will receive a url, for example https://gqgh.sharetunnel.work, that you can share with anyone for as long as your local instance of lt remains active. Any requests will be routed to your local service at the specified port.</p>
+				<p>You will receive a url, for example https://gqgh.sharetunnel.work, that you can share with anyone for as long as your local instance of st remains active. Any requests will be routed to your local service at the specified port.</p>
 			</article>
 			<article id="features" class="main__features main__article">
 				<h3>Features</h3>
